// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentitiesCarousel should not render bubbles if number of identities is more than the maximum 1`] = `<div />`;

exports[`IdentitiesCarousel should render a bubble for each identity 1`] = `
<div>
  <ul
    class="bubbles"
  >
    <li
      class="item"
    >
      <a
        aria-label="KILT Identity 1"
        class="bubble"
        href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
        title="KILT Identity 1"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="KILT Identity 2"
        class="bubble"
        href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
        title="KILT Identity 2"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
        class="bubble"
        href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
        title="KILT Identity 3 which has a very long name and might not even fit on the screen"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="Add Identity"
        class="add"
        href="/identity/NEW"
        title="Add Identity"
      />
    </li>
  </ul>
</div>
`;

exports[`IdentitiesCarousel should render normal identities 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          KILT Identity 2
        </span>
      </div>
    </section>
    <a
      aria-label="KILT Identity 1"
      class="left"
      href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
      title="KILT Identity 1"
    />
    <a
      aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
      class="right"
      href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
      title="KILT Identity 3 which has a very long name and might not even fit on the screen"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 1"
          class="bubble"
          href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="KILT Identity 1"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 2"
          class="bubble"
          href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="KILT Identity 2"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="KILT Identity 3 which has a very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should render the first identity 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          KILT Identity 1
        </span>
      </div>
    </section>
    <a
      aria-label="Add Identity"
      class="left"
      href="/identity/NEW"
      title="Add Identity"
    />
    <a
      aria-label="KILT Identity 2"
      class="right"
      href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
      title="KILT Identity 2"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 1"
          class="bubble"
          href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="KILT Identity 1"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 2"
          class="bubble"
          href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="KILT Identity 2"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="KILT Identity 3 which has a very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should render the last identity 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          KILT Identity 3 which has a very long name and might not even fit on the screen
        </span>
      </div>
    </section>
    <a
      aria-label="KILT Identity 2"
      class="left"
      href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
      title="KILT Identity 2"
    />
    <a
      aria-label="Add Identity"
      class="right"
      href="/identity/NEW"
      title="Add Identity"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 1"
          class="bubble"
          href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="KILT Identity 1"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 2"
          class="bubble"
          href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="KILT Identity 2"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="KILT Identity 3 which has a very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should render the new identity 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <a
        aria-label="Add Identity"
        class="add"
        href="/identity/add"
        title="Add Identity"
      />
    </section>
    <a
      aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
      class="left"
      href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
      title="KILT Identity 3 which has a very long name and might not even fit on the screen"
    />
    <a
      aria-label="KILT Identity 1"
      class="right"
      href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
      title="KILT Identity 1"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 1"
          class="bubble"
          href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="KILT Identity 1"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 2"
          class="bubble"
          href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="KILT Identity 2"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="KILT Identity 3 which has a very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should support other paths 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          KILT Identity 3 which has a very long name and might not even fit on the screen
        </span>
      </div>
    </section>
    <a
      aria-label="KILT Identity 2"
      class="left"
      href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/send"
      title="KILT Identity 2"
    />
    <a
      aria-label="Add Identity"
      class="right"
      href="/identity/NEW/send"
      title="Add Identity"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 1"
          class="bubble"
          href="/identity/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/send"
          title="KILT Identity 1"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 2"
          class="bubble"
          href="/identity/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/send"
          title="KILT Identity 2"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="KILT Identity 3 which has a very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL/send"
          title="KILT Identity 3 which has a very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW/send"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;
